welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: not found: type string
var message: string="a"
             ^BDRBuggle:45: error: not found: value lireMessage
  message=lireMessage()
          ^